--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "typescript": "^5",
+    "eslint-config-prettier": "^9.0.0"
+  },
+  "browserslist": [
+    "chrome 93",
+    "edge 112",
+    "firefox 102",
+    "opera 95",
+    "safari 13.1"
+  ]
 }
