--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "async-mutex": "^0.4.0",
     "formik": "^2.4.5",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,10 +25,10 @@
     "daisyui": "^3.8.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5",
-    "eslint-config-prettier": "^9.0.0"
+    "typescript": "^5"
   },
   "browserslist": [
     "chrome 93",
