--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "async-mutex": "^0.4.0",
-    "formik": "^2.4.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-hook-form": "^7.48.2",
+    "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
