--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "async-mutex": "^0.4.0",
-    "next": "13.5.4",
+    "next": "^14",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
